refactor: Adopt Java 17 language features (#2003)
Use this link to re-run the recipe: https://app.moderne.io/recipes/builder/WYJSM?organizationId=TWljcm9uYXV0

Co-authored-by: Moderne <team@moderne.io>